refactor: provider test refactoring